# khair-2048

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  start.sh
.github/workflows/: main-workflow.yml  test-branch.yml  tests.yml
backend/: README.md  SCHEMATICS.md  pyproject.toml
backend/src/: main.py
backend/src/api/: index.py  models.py  routes.py
backend/src/app/: app.py
backend/src/config/: limiter.py  settings.py
backend/src/game/: board.py  constants.py  direction.py
backend/src/recommendation/: base.py  factory.py  gemini.py  heuristic.py  ollama.py  registry.py  service.py
backend/src/recommendation/heuristic/: heuristic.py  simple.py
backend/src/recommendation/prompt/: gemini.py  ollama.py  prompt.py
backend/test/api/: test_models.py  test_ratelimit.py  test_routes.py
backend/test/game/: test_board.py  test_direction.py
backend/test/recommendation/: test_factory.py  test_gemini.py  test_heuristic.py  test_ollama.py  test_registry.py  test_service.py
backend/test/recommendation/heuristic/: test_simple.py
backend/test/recommendation/prompt/: test_gemini.py  test_ollama.py
docs/: REQUIREMENTS.md
frontend/: .eslintrc.cjs  README.md  SCHEMATICS.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css  types.ts
frontend/test/: App.test.tsx  setup.ts
game/: README.md  SCHEMATICS.md
reco/: README.md  SCHEMATICS.md
server/: README.md  SCHEMATICS.md
src/: main.py
test/: web
web/: README.md  SCHEMATICS.md  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  (+2 more)
(+63 files in other folders)
