[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "khair-2048-backend"
version = "0.1.0"
description = "Backend services for khair-2048"
requires-python = ">=3.11"

dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pydantic",
    "pydantic_settings",
    "httpx",
    "ollama",
    "google-genai",
    "slowapi",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
